--- a/style.css
+++ b/style.css
@@ -7,27 +7,54 @@
 :root {
   /* font-size: 16px; */
   /* color: rgba(0, 0, 0, 80%); */
+  font-family: ;
 }
 
 h1 {
   font-size: 1.5rem;
 }
+h2 {
+  /* margin: 0.2rem 0; */
+}
 
+h3 {
+  margin: 0.3rem 0;
+  font-size: 1.2rem;
+  font-weight: 500;
+}
 header {
   display: flex;
   justify-content: space-between;
   align-items: end;
   background-color: #f95959;
   padding: 1.2rem 2rem;
+  /* height: 10%; */
+}
+input {
+  font-size: 1rem;
+  padding: 0.3rem;
+  border: none;
 }
 
+textarea {
+  border: 1px solid lightgray;
+  /* font-family: ; */
+}
+
+button {
+  min-width: 30px;
+  min-height: 30px;
+  border: none;
+}
 .buttons {
   border: none;
   border-radius: 25px;
   padding: 0.5rem 0.7rem;
   font-size: 1rem;
 }
-
+body {
+  /* height: 100vh; */
+}
 main {
   padding: 1rem 2rem;
 }
@@ -69,6 +96,19 @@ main {
   border-top: 1px solid lightgray;
 }
 
+.name-and-button-container {
+  display: flex;
+  /* justify-content: space-between; */
+  align-items: center;
+}
+
+.add-to-shopping-list-button {
+  background-image: url(images/shopping-list-svgrepo-com.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-color: white;
+}
+
 #recipe-area {
   display: flex;
   flex-direction: column;
@@ -90,8 +130,33 @@ main {
   text-align: center;
 }
 
-#recipe-page {
-  /* padding: 1.2rem 2rem; */
+#recipe-list {
+  display: flex;
+  flex-direction: column;
+}
+
+#name-and-delete-button {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+/* button {
+  
+} */
+
+#delete-button {
+  /* width: 20px;
+  height: 20px; */
+  background-color: crimson;
+  color: white;
+  padding: 10px;
+  border: none;
+}
+
+#ingredient-list {
+  display: flex;
+  flex-direction: column;
+  width: fit-content;
 }
 
 #recipe-ingredients ul {
@@ -101,20 +166,43 @@ main {
 #shopping-list-page {
   display: flex;
   flex-direction: column;
+  gap: 1rem;
+}
+
+#shopping-list-page > * {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 #recipe-list-page {
   display: flex;
   flex-direction: column;
+  gap: 1rem;
+}
+
+#shopping-list-add {
+  flex-direction: row;
+}
+
+#recipe-list-page > * {
+  gap: 1rem;
 }
 
 #recipe-page {
   display: flex;
   flex-direction: column;
+  gap: 1rem;
+}
+
+#instructions-area {
+  /* height: 200px; */
 }
 
 #instructions-input {
-  height: 100px;
+  min-height: 100px;
+  width: 100%;
+  /* field-sizing: normal; */
 }
 
 #console-log-shopping-list-array {
