--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 :root {
   /* font-size: 16px; */
   /* color: rgba(0, 0, 0, 80%); */
-  font-family: ;
+  /* font-family: ; */
 }
 
 h1 {
@@ -23,6 +23,7 @@ h3 {
   font-weight: 500;
 }
 header {
+  max-width: 500px;
   display: flex;
   justify-content: space-between;
   align-items: end;
@@ -54,9 +55,17 @@ button {
 }
 body {
   /* height: 100vh; */
+  /* width: 100vw; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: center; */
+  background-color: lightgray;
 }
 main {
+  max-width: 500px;
   padding: 1rem 2rem;
+  background-color: white;
 }
 
 #list-add {
